mobile portrait view alignment fix

--- a/src/container/container.css
+++ b/src/container/container.css
@@ -105,6 +105,12 @@
     .MuiDrawer-paperAnchorBottom {
         top: 70% !important;
     }
+
+    .jss2{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
 }
 
 @media only screen and (orientation: landscape) and (max-height: 540px) and (max-width: 850px) {
